--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -5,7 +5,7 @@ import MoreProducts from "../components/Products/MoreProducts.astro";
 import PromoProducts from "../components/Products/PromoProducts.astro";
 import Layout from "../layouts/Layout.astro";
 import fetchApi from "../lib/strapi";
-
+import Head from "../layouts/Head.astro";
 
 const pages = await fetchApi({
   endpoint: 'products', 
@@ -96,9 +96,9 @@ const pageMoreProducts = await fetchApi({
 });
 
 const initialCount = 4;
-
+const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
-
+<Head seoData={seoPageData} />
 <Layout>
 
     <ProductsHero {productHeroHeader} {productHeroImage} {productHeroText} {productsAltText} />
