--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -1,5 +1,8 @@
 ---
-const { title, description } = Astro.props;
+const { seoData } = Astro.props;
+const metaDescription = seoData?.metaDescription || "Default description";
+const metaTitle = seoData?.metaTitle || "Print|ED";
+const keywords = seoData?.keywords || "default, keywords";
 ---
 
 <head>
@@ -7,8 +10,9 @@ const { title, description } = Astro.props;
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
-  <meta name="description" content={description} />
-  <title>{title}</title>
+  <meta name="description" content={metaDescription} />
+  <meta name="keywords" content={keywords}/>
+  <title>{metaTitle}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
