--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -1,7 +1,7 @@
 ---
 import ContactUsForm from "../components/ContactUs/ContactUsForm.astro";
 import Hero from "../components/ContactUs/Hero.astro";
-
+import Head from "../layouts/Head.astro";
 import Layout from "../layouts/Layout.astro";
 import fetchApi from "../lib/strapi";
 
@@ -25,8 +25,10 @@ const {contactusHeader, contactusText, callusTitle, callusText, emailTitle, emai
 
 const contactusFormData = pageData.find(pd => pd.__component === "contactusform.contactus-form") || {};
 const {FullName, Email, Phone, Message, sendmessageBtn} = contactusFormData;
----
 
+const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
+---
+<Head seoData={seoPageData} />
 <Layout>
    <div class="background-form">
     <div class="forms-page-wrapper">
